Changed layout (replaced table with div sections).

--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,42 @@ a {
 
 .section {
   border-top: 2px solid #1a2935;
-  max-width: 600px;
+  max-width: 700px;
   min-height: 100px;
   margin: 0 auto;
+  padding: 10px;
+}
+
+.section-title {
+  display: block;
+  width: auto;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.section-image {
+  width: auto;
+  height: 200px;
+}
+
+.section-description {
+  white-space: pre-line;
+  text-align: left;
+  font-size: 14px;
+  padding: 10px;
+}
+
+.section-video {
+
+}
+
+.section-links {
+
+}
+
+.section-badge {
+  width: 200px;
+  margin: 20px;
 }
 
 #footer {
