--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,10 @@ a {
   margin-top: 50px;
 }
 
+.analytics {
+  visibility: hidden;
+}
+
 @media screen and (max-width: 680px) {
   #logo {
     width: 200px;
